--- a/www-timer/index.html
+++ b/www-timer/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.scss"/>
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
     <div class="container">
@@ -46,7 +46,7 @@
       <div class="results"></div>
     </div>
 
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
   
